[package]
name = "musicalcat"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# essentials
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "sync",
    "parking_lot",
] }
poise = "0.6.1"
#{ git = "https://github.com/serenity-rs/poise/" }
#songbird = { version = "0.4.1", features = ["builtin-queue"] }
songbird = { git = "https://github.com/jupyterkat/songbird", branch = "current-cat", features = [
    "builtin-queue",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# errors/loggings
log = "0.4.21"
simplelog = "0.12.2"
eyre = "0.6.12"

# parsings
toml = "0.8.13"
serde = "1.0.202"
regex = "1.10.4"
humantime = "2.1.0"

# shuffle
rand = "0.8.5"
