[package]
name = "musicalcat"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# essentials
tokio = { version = "1.44.1", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "sync",
    "parking_lot",
] }
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

# errors/loggings
log = "0.4.27"
simplelog = "0.12.2"
eyre = "0.6.12"

# parsings
toml = "0.8.20"
serde = "1.0.219"
regex = "1.11.1"
humantime = "2.2.0"

# shuffle
rand = "0.9.0"
