[package]
name = "musicalcat"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# essentials
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "sync",
    "parking_lot",
] }
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["builtin-queue"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }

# errors/loggings
log = "0.4.29"
simplelog = "0.12.2"
eyre = "0.6.12"

# parsings
toml = "1.0.6"
serde = "1.0.228"
regex = "1.12.3"
humantime = "2.3.0"

# shuffle
rand = "0.10.0"
